# CMakeList.txt : CMake project for 28-3-online-restaurant-kitchen, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("28-3-online-restaurant-kitchen-2")

# Add source to this project's executable.
add_subdirectory(src)

# TODO: Add tests and install targets if needed.
